# routes/api.php
@@ -2,7 +2,7 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Middleware\AclIp;
+
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -14,10 +14,9 @@ use App\Http\Middleware\AclIp;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
-
 Route::post('/route', [\App\Http\Controllers\RouteController::class, 'store']);
 Route::get('/route/{user_id}', [\App\Http\Controllers\RouteController::class, 'get']);
+Route::post('/register', [\App\Http\Controllers\AuthController::class, 'register']);
+Route::post('/login', [\App\Http\Controllers\AuthController::class, 'login']);
+Route::middleware('auth:sanctum')->post('/logout', [\App\Http\Controllers\AuthController::class, 'logout']);
 
